# fight_the_landlord

./: LICENSE  README.md  pyproject.toml
fight_the_landlord/: game_master.py
